lib/kube/backend/shared/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $KUBE_APP-service
  namespace: $KUBE_NS
  labels:
    app: $KUBE_APP
spec:
  type: NodePort
  ports:
    - port: 1337
  selector:
    app: $KUBE_APP
